force-app/main/default/objects/Project__c/fields/Expense_Approval__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approval__c</fullName>
    <formula>CASE( Status__c ,
&apos;Approval Needed&apos; , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;),
&apos;Submitted&apos; , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;), 
&apos;Rejected&apos; , IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Approval</label>
    <type>Text</type>
</CustomField>