force-app/main/default/objects/Project__c/recordTypes/For_11_X.recordType-meta.xml
<RecordType>
    <fullName>For_11_X</fullName>
    <active>true</active>
    <label>For 11.X</label>
</RecordType>