force-app/main/default/objects/Project__c/recordTypes/For_7_X.recordType-meta.xml
<RecordType>
    <fullName>For_7_X</fullName>
    <active>true</active>
    <label>For 7.X</label>
</RecordType>