force-app/main/default/objects/Project__c/validationRules/Kickoff_Date_After_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Kickoff_Date_After_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Kickoff_Date__c &gt; End_Date__c</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be after Kickoff Date!!!</errorMessage>
</ValidationRule>